			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04b: *********************************

IMP/MAN: (10/17/05, GVG) Movements recorded in the electric message window (Bug #655).
Verbose mode of all ChangeBatch actions in messages window. Added extra flag in Preferences/General tab.

BUG: (10/17/05, SMR) Array dialog doesn't leave room for numeric fields (Bug #657).
FIX: Added call to pack() at end of constructor.

BUG: (10/17/05, SMR) Aborting a drag leaves the dragged rectangle on the screen (Bug #654).
FIX: In ClickZoomWireListener.keyPressed(), clear the area drag when aborted.

BUG: (10/17/05, SMR) GDS preferences are sensitive to spaces and may update too often (Bug #474)
FIX: In GDSTab.java, compare values, not the string.

IMP: (10/17/05, SMR) Deleting a cell instance reconstructs the arcs to the cell (Bug #491).

BUG: (10/17/05, DN) exception while doing cross-library copy (Bug #652).
FIX: In Cell.copyNodeProtoUsingMapping use getVar(SCHEM_FUNCTION, String.class).

BUG: (10/16/05, DN) Irsim doesn't saves stimuli to disk correctly (found by Moscow students in GNU 8.02).
FIX: In irsim.Analyzer.newVector don't divide thisStep by cmdFileUnits twice. 

BUG: (10/14/05, SMR) Importing preferences doesn't update component menu (Bug #645).
FIX: In PreferencesFrame.importActionPerformed(), update all component menus.

BUG: (10/14/05, SMR) New database doesn't allow variables to be Point2D (Bug #648).
FIX: Converted to EPoint in ViewChanges.makeIconForCell(), AnnularRing.MakeAnnulus.doIt(),
     PadGenerator.createPadFrame(), CIF.nodesPoly(), Connectivity.convertAllGeometry(),
     Connectivity.realizeNode(), DXF.readLineEntity(), EDIF.doPoly(), EDIF.KeyRectangle.pop(),
     GDS.determineBoundary(), GDS.determinePath(), OutlineListener.InitializePoints.doIt(),
     Sue.readFile(), LayerCoverageJob.doIt().
