@@ -4,6 +4,8 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04b: *********************************
 
+IMP: (10/17/05, SMR) Error display (such as viewing DRC errors) now flashes small objects (Bug #656).
+
 IMP/MAN: (10/17/05, GVG) Movements recorded in the electric message window (Bug #655).
 Verbose mode of all ChangeBatch actions in messages window. Added extra flag in Preferences/General tab.
 
